--- a/public/beta.html
+++ b/public/beta.html
@@ -490,7 +490,13 @@
                 elements.loading.classList.add('hidden');
             }
         }
+        import { KokoroTTS } from "kokoro-js";
 
+        const model_id = "onnx-community/Kokoro-82M-v1.0-ONNX";
+        const tts = await KokoroTTS.from_pretrained(model_id, {
+            dtype: "q8", // Options: "fp32", "fp16", "q8", "q4", "q4f16"
+            device: "webgpu", // Options: "wasm", "webgpu" (web) or "cpu" (node). If using "webgpu", we recommend using dtype="fp32".
+        });
         async function fetchGemini(prompt) {
             const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${state.apiKey}`;
 
@@ -542,36 +548,15 @@
             const audioContainer = document.getElementById(`audio-container-${chapterIdx}`);
 
             try {
-                statusText.innerText = "Synthesizing Audio...";
-                barBg.classList.remove('hidden');
 
-                const ttsClient = new window.EdgeTTS();
-                await ttsClient.setMetadata('en-US-AndrewMultilingualNeural', OUTPUT_FORMAT.AUDIO_24KHZ_48KBITRATE_MONO_MP3);
+                const audio = await tts.generate(text, {
+                    // Use `tts.list_voices()` to list all available voices
+                    voice: "af_heart",
+                }); 
+                
 
-                const options = new ProsodyOptions();
-                options.pitch = 'medium';
-                options.rate = 1.0;
-
-                const stream = ttsClient.toStream(text, options);
-                let chunks = [];
-                let receivedBytes = 0;
-
-                stream.on('data', (audioChunk) => {
-                    chunks.push(audioChunk);
-                    receivedBytes += audioChunk.byteLength;
-
-                    // Artificial progress simulation since total stream length isn't always known immediately
-                    // We increase the bar as chunks arrive
-                    const progress = Math.min((chunks.length / (text.length / 10)) * 100, 95);
-                    barFill.style.width = `${progress}%`;
-                    console.log(audioChunk)
-                });
-
-                stream.on('end', () => {
-                    barFill.style.width = `100%`;
-                    statusText.innerText = "Audio Ready";
-
-                    const url = URL.createObjectURL(new Blob(chunks, { type: "audio/mp3" }));
+              
+                    const url = URL.createObjectURL(audio);
 
                     // Create the audio element
                     const audioEl = document.createElement('audio');
@@ -584,7 +569,6 @@
                         barBg.classList.add('hidden');
                         audioContainer.appendChild(audioEl);
                     }, 500);
-                });
 
             } catch (e) {
                 console.warn("TTS Error:", e);
