--- a/public/beta.html
+++ b/public/beta.html
@@ -495,7 +495,7 @@
         const model_id = "onnx-community/Kokoro-82M-v1.0-ONNX";
         const tts = await KokoroTTS.from_pretrained(model_id, {
             dtype: "q8", // Options: "fp32", "fp16", "q8", "q4", "q4f16"
-            device: "webgpu", // Options: "wasm", "webgpu" (web) or "cpu" (node). If using "webgpu", we recommend using dtype="fp32".
+            device: "wasm", // Options: "wasm", "webgpu" (web) or "cpu" (node). If using "webgpu", we recommend using dtype="fp32".
         });
         async function fetchGemini(prompt) {
             const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${state.apiKey}`;
