--- a/public/beta.html
+++ b/public/beta.html
@@ -492,7 +492,7 @@
         }
 
         async function fetchGemini(prompt) {
-            const url = `https://generativelanguage.googleapis.com/v1beta/models/models/gemini-3-flash-preview:generateContent?key=${state.apiKey}`;
+            const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent?key=${state.apiKey}`;
 
             const response = await fetch(url, {
                 method: 'POST',
