--- a/public/beta.html
+++ b/public/beta.html
@@ -127,7 +127,7 @@
                             <option value="Mystery Detective">Mystery Detective</option>
                             <option value="Horror Survival">Horror Survival</option>
                             <option value="Horror Gothic">Horror Gothic</option>
-                            <option value="Horror Physchological">Horror Physchological</option>
+                            <option value="Horror Psychological">Horror Physchological</option>
                             <option value="Romance Comedy">Romance Comedy</option>
                             <option value="Historical Fiction">Historical Fiction</option>
                             <option value="Superhero Action">Superhero Action</option>
