--- a/public/beta.html
+++ b/public/beta.html
@@ -469,7 +469,7 @@
                 
                 Task: Write Chapter ${state.chapters.length + 1}. 
                 Context: Continue the ongoing story based on these previous themes: ${state.fullStoryContext.slice(-1500)}.
-                Requirement: Write a very long, high-quality chapter, and only return plain text, not markdown.
+                Requirement: Write a very long, high-quality chapter, use second person and only return plain text, not markdown.
             `;
 
             try {
