--- a/public/beta.html
+++ b/public/beta.html
@@ -701,7 +701,7 @@
                 author: 'PacePulse AI',
                 publisher: 'PacePulse App',
                 description: `An AI-generated ${state.genre} story based on a workout.`,
-                tags: [state.genre, 'AI Fiction', 'Fitness']
+                tags: [state.genre, 'AI Fiction', 'Fitness'],
             });
 
             // 2. Add Chapters
