--- a/public/beta.html
+++ b/public/beta.html
@@ -208,8 +208,10 @@
     </div>
 
     <script type="module">
+        import Groq from 'https://cdn.jsdelivr.net/npm/groq-sdk@0.37.0/+esm'
         import { EdgeTTSClient, ProsodyOptions, OUTPUT_FORMAT } from 'https://cdn.jsdelivr.net/npm/edge-tts-client@1.0.2/+esm';
         window.EdgeTTS = EdgeTTSClient;
+
         // --- State ---
         let state = {
             active: false,
@@ -536,6 +538,7 @@
 
         // --- TTS ---
         async function speakText(text) {
+
             const chapterIdx = state.chapters.length;
             const statusText = document.getElementById(`audio-status-${chapterIdx}`);
             const barBg = document.getElementById(`progress-bar-bg-${chapterIdx}`);
@@ -553,39 +556,33 @@
                 options.pitch = 'medium';
                 options.rate = 1.0;
 
-                const stream = ttsClient.toStream(text, options);
-                let chunks = [];
-                let receivedBytes = 0;
 
-                stream.on('data', (audioChunk) => {
-                    chunks.push(audioChunk);
-                    receivedBytes += audioChunk.byteLength;
+                const groq = new Groq();
 
-                    // Artificial progress simulation since total stream length isn't always known immediately
-                    // We increase the bar as chunks arrive
-                    const progress = Math.min((chunks.length / (text.length / 10)) * 100, 95);
-                    barFill.style.width = `${progress}%`;
-                    console.log(audioChunk)
+                const wav = await groq.audio.speech.create({
+                    model: "canopylabs/orpheus-v1-english",
+                    voice: "autumn",
+                    response_format: "mp3",
+                    input: text,
                 });
 
-                stream.on('end', () => {
-                    barFill.style.width = `100%`;
-                    statusText.innerText = "Audio Ready";
+                const buffer = Buffer.from(await wav.arrayBuffer());
+                barFill.style.width = `100%`;
+                statusText.innerText = "Audio Ready";
 
-                    const url = URL.createObjectURL(new Blob(chunks, { type: "audio/mp3" }));
+                const url = URL.createObjectURL(new Blob(buffer, { type: "audio/mp3" }));
 
-                    // Create the audio element
-                    const audioEl = document.createElement('audio');
-                    audioEl.controls = true;
-                    audioEl.src = url;
-                    audioEl.className = "h-8 mt-2 w-full accent-red-500 opacity-80 hover:opacity-100 transition-opacity";
+                // Create the audio element
+                const audioEl = document.createElement('audio');
+                audioEl.controls = true;
+                audioEl.src = url;
+                audioEl.className = "h-8 mt-2 w-full accent-red-500 opacity-80 hover:opacity-100 transition-opacity";
 
-                    // Replace progress bar with audio player
-                    setTimeout(() => {
-                        barBg.classList.add('hidden');
-                        audioContainer.appendChild(audioEl);
-                    }, 500);
-                });
+                // Replace progress bar with audio player
+                setTimeout(() => {
+                    barBg.classList.add('hidden');
+                    audioContainer.appendChild(audioEl);
+                }, 500);
 
             } catch (e) {
                 console.warn("TTS Error:", e);
