--- a/public/beta.html
+++ b/public/beta.html
@@ -748,6 +748,7 @@
                 </body>
                 </html>
             `;
+            console.log(htmlContent)
                     // jEpub expects epub.add(title, content)
                     epub.add(chapterTitle, htmlContent);
                 });
