--- a/public/beta.html
+++ b/public/beta.html
@@ -8,6 +8,7 @@
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/jszip/dist/jszip.min.js"></script>
 
     <!-- Third-party libs (localForage for storage, JSZip for EPUB generation) -->
     <script src="https://cdn.jsdelivr.net/npm/localforage@1.10.0/dist/localforage.min.js"></script>
